--- a/README.org
+++ b/README.org
@@ -8,3 +8,5 @@
 - [[https://github.com/seekr-osint/seekr]]
 *** Contributing to
 - [[https://github.com/eza-community/eza]]
+*** Small side projects
+- [[https://github.com/9glenda/lc3ash]] small Assambler posix shell
