--- a/README.org
+++ b/README.org
@@ -9,5 +9,5 @@
 *** Contributing to
 - [[https://github.com/eza-community/eza]]
 *** Small side projects
-- [[https://github.com/9glenda/lc3ash]] small Assambler posix shell
+- [[https://github.com/9glenda/lc3ash]] small semi functional Assambler in posix shell
 - [[https://github.com/9glenda/ocaml-flake]] nix flake for ocaml
